# mcp-fhir

./: .gitignore  EXAMPLES.md  Makefile  QUICKSTART.md  README.md  fhir-mcp-server.py  pyproject.toml
fhir_server/: mcp_server.py  server.py
