[project]
name = "fhir-mcp-server"
version = "0.1.0"
description = "MCP Server for FHIR API interactions with Oracle Millennium Platform"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.13.1",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
fhir-mcp-server = "fhir-mcp-server:main"
